client/emscripten: Keep a reference to the microphone media source

Firefox appears to have a bug where it will garbage collect the source
too early otherwise.

https://bugzilla.mozilla.org/show_bug.cgi?id=934512